Make sure meta doesn't wrap

--- a/assets/scss/item/_list.scss
+++ b/assets/scss/item/_list.scss
@@ -144,6 +144,7 @@ $gap: min(3.5%, var(--cp-gap--sm, 1rem));
 			}
 		}
 
+		.cpl-meta,
 		.cpl-info {
 			font-size: min(2.75vw, var(--cp-font-size--sm));
 			white-space: nowrap;
